package designpatterns.command;

public interface Command {

     void execute();
     void undo();


}
